--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,6 +56,7 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
     implementation 'androidx.activity:activity-compose:1.5.1'
     implementation 'androidx.navigation:navigation-compose:2.5.1'
+    implementation 'androidx.paging:paging-compose:1.0.0-alpha16'
     implementation "org.jetbrains.kotlinx:kotlinx-serialization-core:$serialization_version"
     implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:$serialization_version"
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
