--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,16 +49,18 @@ android {
 dependencies {
     def serialization_version = '1.3.1'
     def ktor_version = '1.6.7'
+    def accompanist_version = '0.25.1'
 
     implementation 'androidx.core:core-ktx:1.8.0'
     implementation "androidx.compose.ui:ui:$compose_version"
-    implementation 'androidx.compose.material3:material3:1.0.0-alpha16'
+    implementation 'androidx.compose.material3:material3:1.0.0-beta01'
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
     implementation 'androidx.activity:activity-compose:1.5.1'
     implementation 'androidx.navigation:navigation-compose:2.5.1'
     implementation 'androidx.paging:paging-compose:1.0.0-alpha16'
     implementation 'androidx.datastore:datastore-preferences:1.0.0'
+    implementation "com.google.accompanist:accompanist-swiperefresh:$accompanist_version"
     implementation "org.jetbrains.kotlinx:kotlinx-serialization-core:$serialization_version"
     implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:$serialization_version"
     implementation "io.ktor:ktor-client-core:$ktor_version"
