--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,14 +50,15 @@ dependencies {
     def serialization_version = '1.3.1'
     def ktor_version = '1.6.7'
     def accompanist_version = '0.25.1'
+    def ui_tooling_version = '1.2.1'
 
-    implementation 'androidx.core:core-ktx:1.8.0'
+    implementation 'androidx.core:core-ktx:1.9.0'
     implementation "androidx.compose.ui:ui:$compose_version"
-    implementation 'androidx.compose.material3:material3:1.0.0-beta01'
-    implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
+    implementation 'androidx.compose.material3:material3:1.0.0-beta02'
+    implementation "androidx.compose.ui:ui-tooling-preview:$ui_tooling_version"
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
     implementation 'androidx.activity:activity-compose:1.5.1'
-    implementation 'androidx.navigation:navigation-compose:2.5.1'
+    implementation 'androidx.navigation:navigation-compose:2.5.2'
     implementation 'androidx.paging:paging-compose:1.0.0-alpha16'
     implementation 'androidx.datastore:datastore-preferences:1.0.0'
     implementation "com.google.accompanist:accompanist-swiperefresh:$accompanist_version"
@@ -67,6 +68,6 @@ dependencies {
     implementation "io.ktor:ktor-client-android:$ktor_version"
     implementation "io.ktor:ktor-client-logging:$ktor_version"
     implementation "io.ktor:ktor-client-serialization:$ktor_version"
-    debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
-    debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_version"
+    debugImplementation "androidx.compose.ui:ui-tooling:$ui_tooling_version"
+    debugImplementation "androidx.compose.ui:ui-test-manifest:$ui_tooling_version"
 }
